// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI Button should render gray hovered active 1`] = `
.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  outline: none;
  border: none;
  transition-property: color,background-color;
  transition-duration: 0.3s;
  transition-timing-function: ease;
  color: #292729;
  background-color: #f6f6f6;
  border-radius: 32px;
  padding: 10px 16px;
  font-size: 16px;
  line-height: 19px;
  font-weight: 700;
  opacity: 1;
  background-color: #292729;
  color: #fff;
  transition: opacity 0.3s ease;
}

.c0:hover {
  cursor: pointer;
}

.c0:active {
  outline: none;
  border: unset;
}

.c0:hover {
  opacity: 0.8;
}

.c0:hover {
  background-color: #292729;
  color: #fff;
}

<div>
  <button
    class="c0"
    role="button"
    type="submit"
  >
    Привет мир
  </button>
</div>
`;

exports[`UI Button should render gray hovered inactive 1`] = `
.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  outline: none;
  border: none;
  transition-property: color,background-color;
  transition-duration: 0.3s;
  transition-timing-function: ease;
  color: #292729;
  background-color: #f6f6f6;
  border-radius: 32px;
  padding: 10px 16px;
  font-size: 16px;
  line-height: 19px;
  font-weight: 700;
  opacity: 1;
}

.c0:hover {
  cursor: pointer;
}

.c0:active {
  outline: none;
  border: unset;
}

.c0:hover {
  background-color: #292729;
  color: #fff;
}

<div>
  <button
    class="c0"
    role="button"
    type="submit"
  >
    Привет мир
  </button>
</div>
`;

exports[`UI Button should render transparent hovered active 1`] = `
.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  outline: none;
  border: none;
  transition-property: color,background-color;
  transition-duration: 0.3s;
  transition-timing-function: ease;
  border-color: #f9b31f;
  border-style: solid;
  border-width: 2px;
  border-radius: 16px;
  font-size: 15px;
  line-height: 18px;
  font-weight: 700;
  letter-spacing: 0.015em;
  color: #f9b31f;
  background-color: transparent;
  padding: 8px 12px;
}

.c0:hover {
  cursor: pointer;
}

.c0:active {
  outline: none;
  border: unset;
}

.c0:active {
  border-color: #f9b31f;
  border-style: solid;
  border-width: 2px;
}

.c0:hover {
  background-color: #f9b31f;
  color: #fff;
}

<div>
  <button
    class="c0"
    role="button"
    type="submit"
  >
    Привет мир
  </button>
</div>
`;

exports[`UI Button should render transparent hovered inactive 1`] = `
.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  outline: none;
  border: none;
  transition-property: color,background-color;
  transition-duration: 0.3s;
  transition-timing-function: ease;
  border-color: #f9b31f;
  border-style: solid;
  border-width: 2px;
  border-radius: 16px;
  font-size: 15px;
  line-height: 18px;
  font-weight: 700;
  letter-spacing: 0.015em;
  color: #f9b31f;
  background-color: transparent;
  padding: 8px 12px;
}

.c0:hover {
  cursor: pointer;
}

.c0:active {
  outline: none;
  border: unset;
}

.c0:active {
  border-color: #f9b31f;
  border-style: solid;
  border-width: 2px;
}

.c0:hover {
  background-color: #f9b31f;
  color: #fff;
}

<div>
  <button
    class="c0"
    role="button"
    type="submit"
  >
    Привет мир
  </button>
</div>
`;

exports[`UI Button should render with content 1`] = `
.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  outline: none;
  border: none;
  transition-property: color,background-color;
  transition-duration: 0.3s;
  transition-timing-function: ease;
  color: #292729;
  background-color: #f6f6f6;
  border-radius: 32px;
  padding: 10px 16px;
  font-size: 16px;
  line-height: 19px;
  font-weight: 700;
  opacity: 1;
}

.c0:hover {
  cursor: pointer;
}

.c0:active {
  outline: none;
  border: unset;
}

.c0:hover {
  background-color: #292729;
  color: #fff;
}

<div>
  <button
    class="c0"
    role="button"
    type="submit"
  >
    Привет мир
  </button>
</div>
`;

exports[`UI Button should render with props example className 1`] = `
.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  outline: none;
  border: none;
  transition-property: color,background-color;
  transition-duration: 0.3s;
  transition-timing-function: ease;
  border-color: #f9b31f;
  border-style: solid;
  border-width: 2px;
  border-radius: 16px;
  font-size: 15px;
  line-height: 18px;
  font-weight: 700;
  letter-spacing: 0.015em;
  color: #f9b31f;
  background-color: transparent;
  padding: 8px 12px;
}

.c0:hover {
  cursor: pointer;
}

.c0:active {
  outline: none;
  border: unset;
}

.c0:active {
  border-color: #f9b31f;
  border-style: solid;
  border-width: 2px;
}

.c0:hover {
  background-color: #f9b31f;
  color: #fff;
}

<div>
  <button
    class="c0 test-class"
    role="button"
    type="submit"
  >
    Привет мир
  </button>
</div>
`;
